<resources>
    <string name="app_name">Champion Spotlight</string>
    <string name="title_activity_champion_spotlight">ChampionSpotlightActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fizz</string>
    <string name="nav_header_subtitle">The Tidal Trickster</string>
    <string name="fizz_base_stats">Fizz Base Stats:</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_stats_skins">Stats &amp; Skins</string>
    <string name="menu_passive">Nimble Fighter</string>
    <string name="menu_q">Urchin Strike</string>
    <string name="menu_w">Seastone Trident</string>
    <string name="menu_e">Playful / Trickster</string>
    <string name="menu_r">Chum the Waters</string>
    <string name="cost">Cost:</string>
    <string name="range">Range:</string>
    <string name="n_a">N/A</string>
    <string name="passive_header">Passive</string>
    <string name="q_header">Q Ability</string>
    <string name="w_header">W Ability</string>
    <string name="e_header">E Ability</string>
    <string name="r_header">Ultimate(R) Ability</string>


</resources>
