<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stats_skins"

            android:title="@string/menu_stats_skins"
            />

        <item
            android:id="@+id/nav_passive"

            android:title="@string/menu_passive"
            />

        <item
            android:id="@+id/nav_q"
            android:icon="@drawable/ic_fizz_q"
            android:title="@string/menu_q"
            />

        <item
            android:id="@+id/nav_w"

            android:title="@string/menu_w"
            />

        <item
            android:id="@+id/nav_e"

            android:title="@string/menu_e"
            />

        <item
            android:id="@+id/nav_r"
            android:icon="@drawable/ic_images"
            android:title="@string/menu_r"
            />


    </group>

</menu>
